--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ wasm-bindgen-futures = "0.4"
 serde-wasm-bindgen = "0.6"
 serde = { version = "1", features = ["derive"] }
 console_error_panic_hook = "0.1.7"
+gloo-timers = "0.3.0"
 
 [workspace]
 members = ["src-tauri"]
