--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ serde-wasm-bindgen = "0.6"
 serde = { version = "1", features = ["derive"] }
 console_error_panic_hook = "0.1.7"
 gloo-timers = "0.3.0"
+web-sys = { version = "0.3", features = ["Window", "EventTarget", "KeyboardEvent"] }
 
 [workspace]
 members = ["src-tauri"]
